.clippy_readable.txt
warning: this `impl` can be derived
  --> crates/riptide-extraction/src/unified_extractor.rs:60:1
   |
60 | / impl Default for NativeExtractor {
61 | |     fn default() -> Self {
62 | |         Self {
63 | |             parser: NativeHtmlParser::new(),
...  |
66 | | }
   | |_^
   |
   = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#derivable_impls
   = note: `#[warn(clippy::derivable_impls)]` on by default
help: replace the manual implementation with a derive attribute
   |
56 + #[derive(Default)]
57 ~ pub struct NativeExtractor {
   |

warning: `riptide-extraction` (lib) generated 1 warning (run `cargo clippy --fix --lib -p riptide-extraction` to apply 1 suggestion)
warning: unneeded `return` statement
   --> crates/riptide-api/src/pipeline.rs:778:13
    |
778 | /             return Err(ApiError::internal(
779 | |                 "WASM extractor not available. Rebuild with --features wasm-extractor",
780 | |             ));
    | |______________^
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#needless_return
    = note: `#[warn(clippy::needless_return)]` on by default
help: remove `return`
    |
778 ~             Err(ApiError::internal(
779 +                 "WASM extractor not available. Rebuild with --features wasm-extractor",
780 ~             ))
    |

warning: `riptide-api` (lib) generated 1 warning (run `cargo clippy --fix --lib -p riptide-api` to apply 1 suggestion)
    Checking riptide-api v0.9.0 (/workspaces/eventmesh/crates/riptide-api)
warning: `riptide-api` (bin "riptide-api" test) generated 1 warning (1 duplicate)
warning: `riptide-api` (bin "riptide-api") generated 1 warning (1 duplicate)
warning: `riptide-api` (lib test) generated 1 warning (1 duplicate)
warning: unused variable: `none_time`
   --> crates/riptide-stealth/benches/stealth_performance.rs:145:9
    |
145 |     let none_time = {
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_none_time`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `low_time`
   --> crates/riptide-stealth/benches/stealth_performance.rs:153:9
    |
153 |     let low_time = {
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_low_time`

warning: unused variable: `medium_time`
   --> crates/riptide-stealth/benches/stealth_performance.rs:161:9
    |
161 |     let medium_time = {
    |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_medium_time`

warning: unused variable: `high_time`
   --> crates/riptide-stealth/benches/stealth_performance.rs:169:9
    |
169 |     let high_time = {
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_high_time`

warning: `riptide-stealth` (bench "stealth_performance") generated 4 warnings
warning: module has the same name as its containing module
   --> crates/riptide-extraction/src/native_parser/tests.rs:4:1
    |
  4 | / mod tests {
  5 | |     use crate::native_parser::{NativeHtmlParser, ParserConfig};
  6 | |
  7 | |     #[test]
...   |
195 | | }
    | |_^
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/master/index.html#module_inception
    = note: `#[warn(clippy::module_inception)]` on by default

warning: `riptide-extraction` (lib test) generated 2 warnings (1 duplicate)
error[E0609]: no field `wasm` on type `riptide_api::config::ApiConfig`
   --> crates/riptide-api/tests/config_env_tests.rs:205:31
    |
205 |             assert_eq!(config.wasm.instances_per_worker, 2);
    |                               ^^^^ unknown field
    |
    = note: available fields are: `resources`, `performance`, `rate_limiting`, `memory`, `headless` ... and 2 others

error[E0609]: no field `wasm` on type `riptide_api::config::ApiConfig`
   --> crates/riptide-api/tests/config_env_tests.rs:206:31
    |
206 |             assert_eq!(config.wasm.module_timeout_secs, 20);
    |                               ^^^^ unknown field
    |
    = note: available fields are: `resources`, `performance`, `rate_limiting`, `memory`, `headless` ... and 2 others

error[E0609]: no field `wasm` on type `riptide_api::config::ApiConfig`
   --> crates/riptide-api/tests/config_env_tests.rs:207:31
    |
207 |             assert_eq!(config.wasm.max_memory_mb, 256);
    |                               ^^^^ unknown field
    |
    = note: available fields are: `resources`, `performance`, `rate_limiting`, `memory`, `headless` ... and 2 others

error[E0609]: no field `wasm` on type `riptide_api::config::ApiConfig`
   --> crates/riptide-api/tests/config_env_tests.rs:208:28
    |
208 |             assert!(config.wasm.enable_recycling);
    |                            ^^^^ unknown field
    |
    = note: available fields are: `resources`, `performance`, `rate_limiting`, `memory`, `headless` ... and 2 others

error[E0609]: no field `wasm` on type `riptide_api::config::ApiConfig`
   --> crates/riptide-api/tests/config_env_tests.rs:209:31
    |
209 |             assert_eq!(config.wasm.health_check_interval_secs, 240);
    |                               ^^^^ unknown field
    |
    = note: available fields are: `resources`, `performance`, `rate_limiting`, `memory`, `headless` ... and 2 others

error[E0609]: no field `wasm` on type `riptide_api::config::ApiConfig`
   --> crates/riptide-api/tests/config_env_tests.rs:210:31
    |
210 |             assert_eq!(config.wasm.max_operations_per_instance, 20000);
    |                               ^^^^ unknown field
    |
    = note: available fields are: `resources`, `performance`, `rate_limiting`, `memory`, `headless` ... and 2 others

error[E0609]: no field `wasm` on type `riptide_api::config::ApiConfig`
   --> crates/riptide-api/tests/config_env_tests.rs:211:31
    |
211 |             assert_eq!(config.wasm.restart_threshold, 20);
    |                               ^^^^ unknown field
    |
    = note: available fields are: `resources`, `performance`, `rate_limiting`, `memory`, `headless` ... and 2 others

error[E0609]: no field `wasm` on type `riptide_api::config::ApiConfig`
   --> crates/riptide-api/tests/config_env_tests.rs:346:31
    |
346 |             assert_eq!(config.wasm.instances_per_worker, 2);
    |                               ^^^^ unknown field
    |
    = note: available fields are: `resources`, `performance`, `rate_limiting`, `memory`, `headless` ... and 2 others

For more information about this error, try `rustc --explain E0609`.
error: could not compile `riptide-api` (test "config_env_tests") due to 8 previous errors
